--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^7.0.0",
+    "eslint-loader": "^4.0.2",
     "mocha": "^5.2.0",
     "sinon": "^6.1.0"
   }
